--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "url": "https://github.com/Pod-Point/es-purge-lambda"
   },
   "scripts": {
+    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
     "tsc": "tsc --noEmit --pretty",
     "deploy": "serverless deploy --stage production"
   },
   "license": "proprietary",
   "devDependencies": {
+    "@pod-point/tslint-config-podpoint-base": "^1.0.0",
     "@types/aws-lambda": "0.0.24",
     "@types/node": "^8.5.2",
     "serverless-webpack": "^4.2.0",
     "ts-loader": "^3.2.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0"
   },
