--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
   "scripts": {
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
     "tsc": "tsc --noEmit --pretty",
-    "deploy": "serverless deploy --stage production"
+    "deploy": "serverless deploy --stage production",
+    "invoke": "serverless invoke local -f purge"
   },
   "license": "MIT",
   "devDependencies": {
+    "@pod-point/tsconfig-podpoint-base": "^0.1.0",
     "@pod-point/tslint-config-podpoint-base": "^1.0.0",
     "@types/aws-lambda": "0.0.24",
+    "@types/elasticsearch": "^5.0.22",
+    "@types/http-aws-es": "^1.1.3",
+    "@types/js-yaml": "^3.11.2",
     "@types/node": "^8.5.2",
     "serverless-webpack": "^4.2.0",
     "ts-loader": "^3.2.0",
@@ -22,11 +27,10 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "@types/elasticsearch": "^5.0.22",
-    "@types/http-aws-es": "^1.1.3",
     "aws-sdk": "^2.224.1",
     "elasticsearch": "^14.2.2",
     "http-aws-es": "^4.0.0",
+    "js-yaml": "^3.12.0",
     "moment": "^2.22.0"
   }
 }
