--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/http-aws-es": "^1.1.3",
     "@types/js-yaml": "^3.11.2",
     "@types/node": "^8.5.2",
+    "copy-webpack-plugin": "^4.5.2",
     "serverless-webpack": "^4.2.0",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
