--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "aws-sdk": "^2.224.1",
     "elasticsearch": "^14.2.2",
     "http-aws-es": "^4.0.0",
-    "js-yaml": "^3.12.0",
+    "js-yaml": ">=3.13.1",
     "moment": "^2.22.0"
   }
 }
