--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "./node_modules/@pod-point/tsconfig-podpoint-base/tsconfig.json",
   "compilerOptions": {
     "strictNullChecks": false,
+    "strictPropertyInitialization": false,
     "sourceMap": true,
     "lib": [
       "es5",
